# ostinato

./: .gitignore  Cargo.toml  MATERIAL_SPEC.md  PLAN.md  README.md  bathroom.blend  bathroom.blend1  build.rs  com...put.t.ter.blend  com...put.t.ter.blend1  ostinato.code-workspace  room.blend  room.blend1
derive_resource/: Cargo.toml
derive_resource/src/: lib.rs
gltf/: Untitled.gltf
res/bathroom/: bathroom.omtl  blue.omi  blue.wgsl  light.omi  light.wgsl  red.omi  red.wgsl
res/core_shaders/: blinn_phong.omi  blinn_phong.wgsl  clickbait.omi  clickbait.wgsl  image.omi  image.wgsl  mesh.omi  mesh.wgsl  obj.omi  obj.wgsl  wireframe.omi  wireframe.wgsl
res/core_shaders/post_processing/: dither.omi  mandelbrot.omi  mandelbrot.wgsl  nothing.wgsl  white_dither.wgsl
res/march/: march.omi  march.wgsl
res/mirror/: mirror.omi  mirror.wgsl
res/shaders/: cloudy.wgsl  image.omi  image.omtl  image.wgsl  mesh.omi  mesh.omtl  mesh.wgsl  sphere.wgsl  static.omi  static.omtl  static.wgsl
res/skull/: human_skull.omtl  material.lib  skull_jaw.omi  skull_material.wgsl  skull_top.omi  teeth.omi
src/: app.rs  ecs.rs  lib.rs  main.rs  old_lib.rs  renderer.rs  resources.rs  texture.rs
src/camera/: controller.rs  light.rs  mod.rs
src/component/: mod.rs
src/input/: keyboard.rs  mouse.rs
src/mesh/: material.rs  mod.rs  model.rs  shader.rs  vertex.rs  wireframe.rs
src/particle/: mod.rs
src/renderer/: mod.rs
src/resources/: collection.rs  material.rs  mod.rs  pipeline.rs  texture.rs
src/resources/mesh/: mod.rs  model.rs  new.rs  vertex.rs  wireframe.rs
src/resources/pipeline/: mod.rs
src/resources/shaders/: image.wgsl  mesh.wgsl  static.omi  static.omtl  static_rainbow.wgsl  static_tex.wgsl
src/shader/: mod.rs
src/shaders/: mesh.wgsl
