[package]
name = "ostinato"
version = "0.1.0"
edition = "2024"

[features]
custom_vertex = ["lazy_static"]
rapier3d = ["dep:rapier3d"]

[dependencies]
derive_resource = { path = "./derive_resource" }
anyhow = "1.0.100"
bytemuck = "1.24.0"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.11"
indexmap = "2.9.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
lazy_static = { version = "1.5.0", optional = true }
as-any = "0.3.2"
nohash-hasher = "0.2.0"
glam = { version = "0.30.9", features = ["bytemuck"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rapier3d = { version = "0.32.0", optional = true }

[build-dependencies]
anyhow = "1.0.98"
fs_extra = "1.2"
glob = "0.3"
