[package]
name = "ostinato"
version = "0.1.0"
edition = "2024"

[features]
custom_vertex = ["lazy_static"]
rapier3d = ["dep:rapier3d"]

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
image = "0.25.6"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.11"
tobj = { version = "3.2", default-features = false, features = ["async"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
lazy_static = { version = "1.5.0", optional = true }
glam = { version = "0.30.9", features = ["bytemuck"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rapier3d = { version = "0.32.0", optional = true }

[build-dependencies]
anyhow = "1.0.98"
fs_extra = "1.2"
glob = "0.3"
